--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,29 +7,20 @@
         android:layout_height="match_parent"
         tools:context=".view.main.MainActivity">
 
-    <TextView
-            android:id="@+id/tvTips"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="请输入你要分类的垃圾"
-            android:gravity="center_horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-    />
     
     <EditText
             android:id="@+id/etGarbage"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvTips"
+            android:layout_height="wrap_content"
+            android:hint="请输入你要分类的垃圾"
+            app:layout_constraintTop_toTopOf="parent"
             />
     
     <Button
             android:id="@+id/btnClassif"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="分类"
+            android:text="查询"
             app:layout_constraintTop_toBottomOf="@+id/etGarbage"
             />
     
@@ -42,6 +33,7 @@
             android:textSize="17sp"
             android:gravity="center_horizontal"
             app:layout_constraintTop_toBottomOf="@+id/btnClassif"
+            android:visibility="invisible"
             />
     
     <ImageView
@@ -49,8 +41,19 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/tvResult"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/question"
             />
     
+    <TextView
+            android:id="@+id/question"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="感觉分类错误?,点击提交反馈,帮助其他人更好的分类"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center"
+            android:textColor="@color/color_recy"
+            android:layout_marginBottom="@dimen/margin_15"
+            
+            />
 
 </android.support.constraint.ConstraintLayout>
